Revert "fix: position of prompt icon is incorrect in paragraph on mobile"
This reverts commit 5df953f6c877e2aa3f1f4981c97a0b8007abe6d4.

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1281,6 +1281,10 @@ $sidebar-display: "sidebar-display";
 
         border-radius: 0;
         max-width: none;
+
+        &::before {
+          left: 1rem;
+        }
       }
     }
   }
